[package]
name = "u24"
version = "0.3.0"
edition = "2024"
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/u24"
homepage = "https://github.com/orbitinghail/u24"

categories = ["data-structures", "encoding", "no-std"]
description = "An unsigned 24-bit integer type."

[features]
rangemap = ["dep:rangemap"]
range-set-blaze = ["dep:range-set-blaze"]

[dependencies]
num = { version = "0.4", default-features = false }
static_assertions = "1.1"
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

rangemap = { version = "1.6.0", optional = true }
range-set-blaze = { version = "0.3.0", optional = true }
